[package]
name = "redis_rust"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
regex = "1.5.4"

[dependencies.redis]
version = "*"

[[bin]]
name = "server"
path = "src/server_run.rs"

[[bin]]
name = "server_html"
path = "src/server_html_run.rs"
