[package]
name = "redis_rust"
version = "0.1.0"
authors = ["Agustin Firmapaz <afirmapaz@fi.uba.ar>", "Federico Pacheco <fpacheco@fi.uba.ar>", "Martina Panetta <mpanetta@fi.uba.ar>"]
edition = "2018"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
regex = "1.5.4"

[dependencies.redis]
version = "*"

[[bin]]
name = "server_database"
path = "src/server_run.rs"

[[bin]]
name = "server_html"
path = "src/server_html_run.rs"
