[package]
name = "redis_rust"
version = "1.0.0"
authors = ["Agustin Firmapaz <afirmapaz@fi.uba.ar>", "Federico Pacheco <fpacheco@fi.uba.ar>", "Martina Panetta <mpanetta@fi.uba.ar>"]
edition = "2018"
readme = "README.md"

[dependencies]
rand = "*"
regex = "*"
redis = "*"

[[bin]]
name = "server_database"
path = "src/server_run.rs"

[[bin]]
name = "server_html"
path = "src/server_html_run.rs"